--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,12 @@ padding: 0;}
 .banner__section {
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/2856828.png);
     height: 50%;
-    object-fit: contain;
+    width: 100%;
+    /* object-fit: contain; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    /* position: relative; */
     border: none;
 }
 #drp-down{
@@ -30,7 +31,7 @@ padding: 0;}
     font-size: 2rem;
 }
 .banner__header{
-    font-size: 3rem;
+    font-size: 2.3rem;
     color: #fff;
     font-weight: bold;
 
