--- a/css/style.css
+++ b/css/style.css
@@ -64,13 +64,23 @@ padding: 0;}
     font-size: 0.9rem !important;
     color: #fff !important;
 }
-.card-title{
-    font-size: 1rem;
+.book_an_appointmnt{
+    font-size: 1.75rem;
     color: #fff;
     height: 2rem;
     font-weight: 700;
     font-family: 'Open Sans', sans-serif !important;
 }
+
+.star-img{
+    width: 1rem;
+}
+
+.book-now-btn{
+    width: 8.25rem;
+    height: 2.87rem;
+}
+
 h3{
     font-size: 2rem !important;
     font-family: 'Open Sans', sans-serif;
@@ -109,33 +119,49 @@ h3{
 /* how it works */
 
 /* our customer */
-
-.our_cstm_text{
-    font-family: 'Open Sans',sans-serif;
-    font-weight: 400;
+.our_reviewers{
+    font-family: 'Open-Sans',sans-serif !important;
+    font-weight: 700;
+    font-size: 1.25rem;
+}
+.reviwer_description{
     font-size: 1rem;
+    font-family: 'Open-Sans',sans-serif !important;
+    font-weight: 400;
+    margin-bottom: 0;
+
+}
+h5{
+    font-family: 'Open-Sans',sans-serif !important;
+    font-size: 1.125rem !important;
+    font-weight: 700 !important;
+    margin-bottom: 0;
+
 }
 
-.our_cstmr_heading{
-    font-family: 'Open-Sans' ,sans-serif;
-    font-size: 1.5rem !important;
-    font-weight: 600;
-
+hr.nicest_things_hr{
+    border-top: 2px dashed #B5AFAF;
+    background-color: blanchedalmond;
+}
+.review-text{
+    font-family: 'Open-Sans',sans-serif;
+    font-weight: 400;
 }
 /*  */
 /* *****cities we operated****** */
 
 .cities_we_operated{
-    font-size: 1.9vw;
+    font-size: 1rem !important;
 }
 
 .city{
-    font-size: 0.7rem !important;
+    font-size: 1rem !important;
     color: #666666;
   
 }
 .city-icon{
     margin-right: 0.3rem;
+    margin-top: 0.2rem;
 }
 
 /* *****cities we operated****** */
